--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EconoApp</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>EconoApp</h1>
-    <img src="img/undraw_access_account_re_8spm.svg" alt="user">
+<body class="center">
+  <main class="center container">
+    <header class="center header">
+      <h1 class="app_title">EconoApp</h1>
+      <h3 class="page_title">Menu Principal</h3>
+    </header>
+    <aside>
+      <img class="page_img" src="img/undraw_shopping_app_flsj.svg" alt="EconoApp">
+    </aside>
+    <section>
+      <a class="primary_btn" role="button" href="pages/menu.html">Entrar</a>
+    </section>
+  </main>
 </body>
 </html>
