--- a/src/pages/usuario/menu.html
+++ b/src/pages/usuario/menu.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EconoApp - Menu usuário</title>
-    <link rel="stylesheet" href="../../style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EconoApp - Menu usuário</title>
+  <link rel="stylesheet" href="../../style.css">
 </head>
+
 <body class="center">
   <main class="center container">
     <header class="center header">
       <h1 class="app_title">EconoApp</h1>
       <h3 class="page_title">Menu usuário</h3>
     </header>
+    <nav class="content center">
+      <a class="center btn" role="button" href="login.html">
+        <img class="icon" src="../../img/login-svgrepo-com.svg" alt="Login"><span>Login</span>
+      </a>
+      <a class="center btn" role="button" href="cadastro.html">
+        <img class="icon" src="../../img/new-file-svgrepo-com.svg" alt="Cadastro"><span>Cadastro</span>
+      </a>
+      <a class="center btn" role="button" href="exclusao.html">
+        <img class="icon" src="../../img/delete-svgrepo-com.svg" alt="Exclusão"><span>Exclusâo</span>
+      </a>
+    </nav>
   </main>
 </body>
+
 </html>
