--- a/src/pages/usuario/cadastro.html
+++ b/src/pages/usuario/cadastro.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EconoApp - Cadastro usuário</title>
-    <link rel="stylesheet" href="../../style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EconoApp - Cadastro usuário</title>
+  <link rel="stylesheet" href="../../style.css">
 </head>
-<body class="center">
+
+<body>
   <main class="center container">
     <header class="center header">
       <h1 class="app_title">EconoApp</h1>
       <h3 class="page_title">Cadastro usuário</h3>
     </header>
+    <aside>
+      <img class="page_img" src="../../img/undraw_usability_testing_re_uu1g.svg" alt="EconoApp">
+    </aside>
+    <section>
+      <form class="center" action="#">
+        <label class="form_field_conteiner">
+          <input class="form_field" type="text" name="cpf" placeholder="CPF" required>
+        </label>
+        <label class="form_field_conteiner">
+          <input class="form_field" type="text" name="nome" placeholder="Nome" required>
+        </label>
+        <label class="form_field_conteiner">
+          <input class="form_field" type="number" name="senha" placeholder="Senha" min="0" required>
+        </label>
+        <label class="form_field_conteiner">
+          <input class="form_field" type="text" name="confirmar-senha" placeholder="Confirmar senha" required>
+        </label>
+        <input class="primary_btn" type="submit" value="Cadastrar">
+      </form>
+    </section>
   </main>
 </body>
+
 </html>
