--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -14,7 +14,7 @@
       <h3 class="page_title">Menu Principal</h3>
     </header>
     <nav class="content center">
-      <a class="center btn" role="button" href="#">
+      <a class="center btn" role="button" href="usuario\menu.html">
         <img class="icon" src="../img/user-svgrepo-com.svg" alt="Usuário"><span>Usuário</span>
       </a>
       <a class="center btn" role="button" href="#">
