--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -17,10 +17,10 @@
       <a class="center btn" role="button" href="usuario\menu.html">
         <img class="icon" src="../img/user-svgrepo-com.svg" alt="Usuário"><span>Usuário</span>
       </a>
-      <a class="center btn" role="button" href="#">
+      <a class="center btn" role="button" href="produto\menu.html">
         <img class="icon" src="../img/supermarket-sale-svgrepo-com.svg" alt="Produto"><span>Produto</span>
       </a>
-      <a class="center btn" role="button" href="#">
+      <a class="center btn" role="button" href="estabelecimento\cadastro.html">
         <img class="icon" src="../img/supermarkets-store-svgrepo-com.svg" alt="Estabelecimento"><span>Estabelecimento</span>
       </a>
       <a class="center btn" role="button" href="#">
