Incluindo pagina ajuda

--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -23,7 +23,7 @@
       <a class="center btn" role="button" href="estabelecimento\cadastro.html">
         <img class="icon" src="../img/supermarkets-store-svgrepo-com.svg" alt="Estabelecimento"><span>Estabelecimento</span>
       </a>
-      <a class="center btn" role="button" href="#">
+      <a class="center btn" role="button" href="ajuda.html">
         <img class="icon" src="../img/help-svgrepo-com.svg" alt="Ajuda"><span>Ajuda</span>
       </a>
     </nav>
