--- a/src/pages/estabelecimento/cadastro.html
+++ b/src/pages/estabelecimento/cadastro.html
@@ -13,6 +13,17 @@
       <h1 class="app_title">EconoApp</h1>
       <h3 class="page_title">Cadastro estabelecimento</h3>
     </header>
+    <section>
+      <form class="center" action="#">
+        <label class="form_field_conteiner">
+          <input class="form_field" type="text" name="nome" placeholder="Nome" required>
+        </label>
+        <label class="form_field_conteiner">
+          <input class="form_field" type="text" name="endereco" placeholder="Endereço" required>
+        </label>
+        <input class="primary_btn" type="submit" value="Cadastrar">
+      </form>
+    </section>
   </main>
 </body>
 </html>
