adicionando pagina menu produto

--- a/src/pages/produto/menu.html
+++ b/src/pages/produto/menu.html
@@ -13,6 +13,14 @@
       <h1 class="app_title">EconoApp</h1>
       <h3 class="page_title">Menu produto</h3>
     </header>
+    <nav class="content center">
+      <a class="center btn" role="button" href="cadastro.html">
+        <img class="icon" src="../../img/new-file-svgrepo-com.svg" alt="Usuário"><span>Cadastro</span>
+      </a>
+      <a class="center btn" role="button" href="consulta.html">
+        <img class="icon" src="../../img/search-svgrepo-com.svg" alt="Produto"><span>Consulta</span>
+      </a>
+    </nav>
   </main>
 </body>
 </html>
