adicionando link para voltar

--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -27,6 +27,7 @@
         <img class="icon" src="../img/help-svgrepo-com.svg" alt="Ajuda"><span>Ajuda</span>
       </a>
     </nav>
+    <a class="voltar_link" href="javascript:history.back()">Voltar</a>
   </main>
 </body>
 </html>
