--- a/src/pages/produto/menu.html
+++ b/src/pages/produto/menu.html
@@ -20,6 +20,7 @@
       <a class="center btn" role="button" href="consulta.html">
         <img class="icon" src="../../img/search-svgrepo-com.svg" alt="Produto"><span>Consulta</span>
       </a>
+      <a class="voltar_link" href="javascript:history.back()">Voltar</a>
     </nav>
   </main>
 </body>
