--- a/src/pages/usuario/cadastro.html
+++ b/src/pages/usuario/cadastro.html
@@ -35,6 +35,7 @@
         <input class="primary_btn" type="submit" value="Cadastrar">
       </form>
     </section>
+    <a class="voltar_link" href="javascript:history.back()">Voltar</a>
   </main>
 </body>
 
