--- a/src/pages/usuario/exclusao.html
+++ b/src/pages/usuario/exclusao.html
@@ -29,6 +29,7 @@
         <input class="primary_btn" type="submit" value="Excluir">
       </form>
     </section>
+    <a class="voltar_link" href="javascript:history.back()">Voltar</a>
   </main>
 </body>
 
