--- a/src/pages/usuario/menu.html
+++ b/src/pages/usuario/menu.html
@@ -26,6 +26,7 @@
         <img class="icon" src="../../img/delete-svgrepo-com.svg" alt="Exclusão"><span>Exclusâo</span>
       </a>
     </nav>
+    <a class="voltar_link" href="javascript:history.back()">Voltar</a>
   </main>
 </body>
 
