versão final tela de ajuda

--- a/pages/ajuda.html
+++ b/pages/ajuda.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EconoApp - Ajuda</title>
-  <link rel="stylesheet" href="estilosAjuda.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -26,10 +26,9 @@
         <h1>usuário</h1>
         <br>
 
-        <li><a href="usuario/cadastro.html">Primeiro cadastro</a> </li>
-        <li><a href="usuario/exclusao.html">Excluir usuário</a></li>
-        <li><a href="usuario/login.html">Fazer login</a></li>
-        <li><a href="usuario/menu.html">Menu do usuário</a></li>
+        Página do usuário: lá é possível que você como pessoa física cadastre ou exclua seu perfil,
+        altere sua senha ou faça o login. Para visualizar as opções, acesse
+        <a href="usuario/menu.html">Menu do usuário</a>
       </ul>
 
     </nav>
@@ -37,18 +36,21 @@
       <ul>
       <h1>produto</h1>
       <br>
-      <li><a href="produto/cadastro.html">Cadastrar produto</a></li>
-      <li><a href="produto/consulta.html">Consultar estoque do produto</a></li>
-      <li><a href="produto/menu.html">Menu do produto</a></li>
+      
+      Página do produto: Aqui é possível consultar um produto ou cadastrar um novo.
+      Para fazer isso, acesse 
+      <a href="produto/menu.html">Menu do produto</a>
     </ul>
     </nav>
     <nav class="content right">
       <h1>estabelecimento</h1>
       <br>
+      Aqui você cadastrar um novo estabelecimento para que possamos cadastrar novos produtos a ele! Acesse
       <a href="estabelecimento/cadastro.html">Cadastrar estabelecimento</a>
+      <br>
+      <a class="voltar_link" href="javascript:history.back()">Voltar</a>
     </nav>
-    
-    <a class="voltar_link" href="javascript:history.back()">Voltar</a>
+  
   </main>
 
 </body>
